<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.example.movie_search_app.MoviesViewModel" />
    </data>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/posterImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toRightOf="@+id/posterImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="12sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toRightOf="@+id/posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintRight_toLeftOf="@id/Year"/>
                <TextView
                    android:id="@+id/Year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="12sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toRightOf="@+id/genre"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/imdb_page"
                    android:textSize="12sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="#1C2C83"
                    app:layout_constraintTop_toBottomOf="@+id/genre"
                    app:layout_constraintLeft_toRightOf="@+id/posterImage"
                    app:layout_constraintRight_toRightOf="parent" />
                <TextView
                    android:id="@+id/share"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/share"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/square_button"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toRightOf="@+id/posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/link"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        
    </LinearLayout>

</layout>